# mcp-client-example

./: mcp_client.py  mpc_client.py  pyproject.toml  readme.md
mcp_simple_prompt/: server.py
